build_output_utf8.txt
cargo : warning: `C:\Users\Adm
inistrator\.cargo\config` is d
eprecated in favor of `config.
toml`
所在位置 行:1 字符: 1
+ cargo check > build_output.t
xt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~
    + CategoryInfo          : 
    NotSpecified: (warning:   
  `C:\Us...f `config.toml`:   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
note: if you need to support c
argo 1.38 or earlier, you can 
symlink `config` to `config.to
ml`
warning: unused import: `self`
 --> src\blf\src\objects\log_c
ontainer.rs:5:15
  |
5 | use std::io::{self, Cursor
, Read};
  |               ^^^^
  |
  = note: `#[warn(unused_impor
ts)]` on by default

warning: ambiguous glob re-exp
orts
  --> src\blf\src\objects\mod.
rs:12:9
   |
12 | pub use can::*;
   |         ^^^^^^ the name `
messages` in the type namespac
e is first re-exported here
13 | pub use lin::*;
   |         ------ but the na
me `messages` in the type name
space is also re-exported here
   |
   = note: `#[warn(ambiguous_g
lob_reexports)]` on by default

warning: unused import: `env_v
ars::*`
  --> src\blf\src\objects\mod.
rs:17:9
   |
17 | pub use env_vars::*;
   |         ^^^^^^^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\flex
ray\message.rs:53:19
   |
28 | impl FlexRayData {
   | ---------------- method i
n this implementation
...
53 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^
   |
   = note: `#[warn(dead_code)]
` on by default

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\message.rs:108:19
    |
77  | impl FlexRayV6Message {
    | --------------------- me
thod in this implementation
...
108 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\message.rs:201:19
    |
154 | impl FlexRayVFrReceiveMs
g {
    | ------------------------
- method in this implementatio
n
...
201 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\message.rs:320:19
    |
257 | impl FlexRayVFrReceiveMs
gEx {
    | ------------------------
--- method in this implementat
ion
...
320 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\flex
ray\status_events.rs:57:19
   |
30 | impl FlexRaySync {
   | ---------------- method i
n this implementation
...
57 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\flex
ray\status_events.rs:99:19
   |
77 | impl FlexRayV6StartCycleE
vent {
   | -------------------------
---- method in this implementa
tion
...
99 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\status_events.rs:145:19
    |
123 | impl FlexRayStatusEvent 
{
    | ----------------------- 
method in this implementation
...
145 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\status_events.rs:202:19
    |
173 | impl FlexRayVFrError {
    | -------------------- met
hod in this implementation
...
202 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\status_events.rs:268:19
    |
234 | impl FlexRayVFrStatus {
    | --------------------- me
thod in this implementation
...
268 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
   --> src\blf\src\objects\fle
xray\status_events.rs:338:19
    |
302 | impl FlexRayVFrStartCycl
e {
    | ------------------------
- method in this implementatio
n
...
338 |     pub(crate) fn write<
W: Write>(&self, _writer: &mut
 W) -> BlfParseResult<()> {
    |                   ^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\ethe
rnet\frame.rs:63:19
   |
32 | impl EthernetFrame {
   | ------------------ method
 in this implementation
...
63 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\app_
events\trigger.rs:37:19
   |
22 | impl AppTrigger {
   | --------------- method in
 this implementation
...
37 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\app_
events\comment_marker.rs:33:19
   |
18 | impl EventComment {
   | ----------------- method 
in this implementation
...
33 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: method `write` is nev
er used
  --> src\blf\src\objects\app_
events\comment_marker.rs:97:19
   |
59 | impl GlobalMarker {
   | ----------------- method 
in this implementation
...
97 |     pub(crate) fn write<W
: Write>(&self, _writer: &mut 
W) -> BlfParseResult<()> {
   |                   ^^^^^

warning: `blf` (lib) generated
 17 warnings (run `cargo fix -
-lib -p blf` to apply 2 sugges
tions)
    Checking canview v0.1.0 (C
:\Users\Administrator\Rustrove
rProjects\canview)
error[E0609]: no field `is_tit
le_dragging` on type `&mut App
`
   --> src\main.rs:470:37
    |
470 | ...                   ap
p.is_title_dragging = true;
    |                         
  ^^^^^^^^^^^^^^^^^ unknown fi
eld

error[E0609]: no field `is_tit
le_dragging` on type `&mut App
`
   --> src\main.rs:473:37
    |
473 | ...                   ap
p.is_title_dragging = false;
    |                         
  ^^^^^^^^^^^^^^^^^ unknown fi
eld

error[E0609]: no field `is_tit
le_dragging` on type `&mut App
`
   --> src\main.rs:476:40
    |
476 | ...                   if
 app.is_title_dragging {
    |                         
     ^^^^^^^^^^^^^^^^^ unknown
 field

error[E0609]: no field `is_tit
le_dragging` on type `&mut App
`
   --> src\main.rs:477:41
    |
477 | ...                   ap
p.is_title_dragging = false;
    |                         
  ^^^^^^^^^^^^^^^^^ unknown fi
eld

For more information about thi
s error, try `rustc --explain 
E0609`.
error: could not compile `canv
iew` (bin "canview") due to 4 
previous errors
